log
Thu 28 Sep 2023 01:21:54 AM UTC: 
 tests:  0|4
total_score: 0/70
45519d5
Thu 28 Sep 2023 01:35:58 AM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘nuevoArreglo’
   37 |   nuevoHeap->nuevoArreglo=
      |            ^~
heap.c:39:4: error: expected expression before ‘return’
   39 |    return NULL;
      |    ^~~~~~
heap.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e10efe9
Thu 28 Sep 2023 01:38:13 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArreglo’
   37 |   nuevoHeap->HeapArreglo=(heapElem *)malloc(2 * sizeof(heapElem));
      |            ^~
heap.c:39:21: error: expected ‘;’ before ‘return’
   39 |   nuevoHeap->capac=3
      |                     ^
      |                     ;
   40 | 
   41 |    return NULL;
      |    ~~~~~~            
heap.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
32e374f
Thu 28 Sep 2023 01:38:20 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArreglo’
   37 |   nuevoHeap->HeapArreglo=(heapElem *)malloc(2 * sizeof(heapElem));
      |            ^~
Compilation failed
244c24e
Thu 28 Sep 2023 01:38:59 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArreglo’
   37 |   nuevoHeap->HeapArreglo=(heapElem *)malloc(2 * sizeof(heapElem));
      |            ^~
heap.c:41:19: error: expected ‘;’ before ‘}’ token
   41 |   return nuevoHeap
      |                   ^
      |                   ;
   42 | }
      | ~                  
Compilation failed
4f1f7c0
Thu 28 Sep 2023 01:39:04 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArreglo’
   37 |   nuevoHeap->HeapArreglo=(heapElem *)malloc(2 * sizeof(heapElem));
      |            ^~
Compilation failed
b072854
Thu 28 Sep 2023 01:39:11 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArreglo’
   37 |   nuevoHeap->HeapArreglo=(heapElem *)malloc(3 * sizeof(heapElem));
      |            ^~
Compilation failed
94f53f1
Thu 28 Sep 2023 01:39:25 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArreglo’
   37 |   nuevoHeap->HeapArreglo=(heapElem *)malloc(3 * (sizeof(heapElem)));
      |            ^~
Compilation failed
0eae33a
Thu 28 Sep 2023 01:40:38 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:14: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArray’; did you mean ‘heapArray’?
   37 |   nuevoHeap->HeapArray=(heapElem *)malloc(3 * sizeof(heapElem));
      |              ^~~~~~~~~
      |              heapArray
Compilation failed
537d2ca
